Added findBynumber Document Identity method
